FIxes to "creator" drop down list, not showing contacts
- css issue

--- a/resources/assets/sass/partials/_forms.scss
+++ b/resources/assets/sass/partials/_forms.scss
@@ -35,3 +35,7 @@
 label{
     font-weight: 400;
 }
+
+.inner.open{
+  margin-top: 40px;
+}
